1. 로그인 화면 전환 안 됨.. 80% 2. 각각의 페이지 화면 구상 50% 3. navi, footer include 해야함.

--- a/environment/src/main/webapp/view/board_write.html
+++ b/environment/src/main/webapp/view/board_write.html
@@ -3,12 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Post 1 Headline, Post 2 Headline, Post 3 Headline">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>detail</title>
+    <title>board_write</title>
     <link rel="stylesheet" href="../css/nicepage.css" media="screen">
-	<link rel="stylesheet" href="../css/detail.css" media="screen">
+	<link rel="stylesheet" href="../css/board_write.css" media="screen">
     <script class="u-script" type="text/javascript" src="../js/jquery-1.9.1.min.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 3.23.8, nicepage.com">
@@ -23,7 +23,7 @@
 		"logo": "images/envLogo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="detail">
+    <meta property="og:title" content="board_write">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-c967"><div class="u-clearfix u-sheet u-sheet-1">
@@ -59,21 +59,38 @@
           <img src="../images/envLogo.png" class="u-logo-image u-logo-image-1">
         </a>
       </div></header>
-    <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1280" data-image-height="853" id="sec-e4b2">
-      <div class="u-align-left u-clearfix u-sheet u-sheet-1">
-        <h3 class="u-text u-text-default u-text-1">DE​TAIL</h3>
-        <h4 class="u-text u-text-default u-text-2">Home &gt; Board &gt; Detail</h4>
+    <section class="u-align-center u-clearfix u-image u-section-1" src="" id="sec-8373" data-image-width="1280" data-image-height="855">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">WRITE</h2>
+        <p class="u-text u-text-body-alt-color u-text-default u-text-2">Home &gt; Board &gt; Write</p>
       </div>
     </section>
-    <section class="u-clearfix u-section-2" id="sec-aec7">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="fr-view u-align-center u-clearfix u-rich-text u-text u-text-1">
-          <h1 style="text-align: center;">Sample Headline</h1>
-          <p style="text-align: center;">
-            <span style="line-height: 2.0;">Sample text. Click to select the text box. Click again or double click to start editing the text. Dictum non consectetur a erat nam at. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Tellus mauris a diam maecenas sed enim ut sem. Ipsum faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Pretium nibh ipsum consequat nisl vel pretium. In eu mi bibendum neque eges<img src="../images/2.svg" width="570" align="center" style="width: 366px;" class="fr-dib fr-fic">tas congue. Vitae ultricies leo integer malesuada nunc. Nibh praesent tristique magna sit amet purus gravida. Diam volutpat commodo sed egestas. Gravida dictum fusce ut placerat orci nulla pellentesque. Ornare massa eget egestas purus viverra. Morbi enim nunc faucibus a pellentesque sit amet porttitor. Mattis pellentesque id nibh tortor id aliquet lectus proin nibh. Molestie nunc non blandit massa enim nec dui. Felis imperdiet proin fermentum leo vel orci porta. Natoque penatibus et magnis dis parturient montes nascetur ridiculus mus. 
-            </span>
-          </p>
+    <section class="u-clearfix u-section-2" id="sec-dfa7">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-form u-form-1">
+          <form action="https://nicepage.com/editor/Forms/Process" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
+            <input type="hidden" id="siteId" name="siteId" value="618634">
+            <input type="hidden" id="pageId" name="pageId" value="618641">
+            <div class="u-form-group u-form-group-1">
+              <label for="text-50d4" class="u-form-control-hidden u-label"></label>
+              <input type="text" placeholder="" id="text-50d4" name="text" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
+            </div>
+            <div class="u-form-group u-form-textarea u-form-group-2">
+              <label for="textarea-d26c" class="u-form-control-hidden u-label"></label>
+              <textarea rows="4" cols="50" id="textarea-d26c" name="textarea" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required=""></textarea>
+            </div>
+            <div class="u-align-right u-form-group u-form-submit">
+              <a href="#" class="u-btn u-btn-submit u-button-style">저장</a>
+              <input type="submit" value="submit" class="u-form-control-hidden">
+            </div>
+            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+            <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+            <input type="hidden" value="" name="recaptchaResponse">
+          </form>
         </div>
+        <h4 class="u-text u-text-default u-text-1">제목</h4>
+        <h3 class="u-text u-text-default u-text-2">내용</h3>
+        <a href="https://nicepage.com/c/contacts-website-templates" class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-2">취소</a>
       </div>
     </section>
     
@@ -82,14 +99,14 @@
         <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/css-templates" target="_blank">
-        <span>CSS Templates</span>
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
       </a>
       <p class="u-text">
         <span>created with</span>
       </p>
-      <a class="u-link" href="https://nicepage.com/html-website-builder" target="_blank">
-        <span>HTML Builder</span>
+      <a class="u-link" href="https://nicepage.com/" target="_blank">
+        <span>Website Builder Software</span>
       </a>. 
     </section>
   </body>
