--- a/environment/src/main/webapp/view/Join.html
+++ b/environment/src/main/webapp/view/Join.html
@@ -1,6 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
@@ -9,11 +6,11 @@
     <meta name="keywords" content="Nam ultrices ultrices nec tortor pulvinar esteras loremips est orem.">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Login</title>
-    <link rel="stylesheet" href="css/nicepage.css" media="screen">
-    <link rel="stylesheet" href="css/Login.css" media="screen">
-    <script class="u-script" type="text/javascript" src="js/jquery-1.9.1.min.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="js/nicepage.js" defer=""></script>
+    <title>Join</title>
+    <link rel="stylesheet" href="../css/nicepage.css" media="screen">
+<link rel="stylesheet" href="../css/Join.css" media="screen">
+    <script class="u-script" type="text/javascript" src="../js/jquery-1.9.1.min.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="../js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 3.23.8, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     
@@ -25,12 +22,12 @@
 		"logo": "../images/2743b7d2-73a2-42ac-e1ba-e365b897d6ea.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Login">
+    <meta property="og:title" content="Join">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-ade3 u-white u-header" id="sec-38c0"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-image-default u-logo u-image-1" data-image-width="200" data-image-height="94">
-          <img src="images/2743b7d2-73a2-42ac-e1ba-e365b897d6ea.png" class="u-logo-image u-logo-image-1">
+          <img src="../images/2743b7d2-73a2-42ac-e1ba-e365b897d6ea.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1.5rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
@@ -65,48 +62,48 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-container-style u-group u-opacity u-opacity-80 u-radius-30 u-shape-round u-white u-group-1">
           <div class="u-container-layout u-container-layout-1">
-            <h1 class="u-text u-text-default u-text-palette-1-base u-text-1">Sign in!</h1>
+            <h1 class="u-text u-text-default u-text-palette-1-base u-text-1">Let's Start!</h1>
             <div class="u-form u-form-1">
-              <form action="login.do" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
-                <c:if test="${errors.idOrPwNotMatch}">
-					<script type="text/javascript">
-							alert('아이디와 암호가 일치하지 않습니다.');
-					</script>
-				</c:if>
+              <form action="join.do" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
                 <input type="hidden" id="siteId" name="siteId" value="618681">
-                <input type="hidden" id="pageId" name="pageId" value="619496">
-                <div class="u-form-group u-form-group-1">
-                  <label for="text-0ad8" class="u-label">ID</label>
-                  <input type="text" placeholder="Enter your ID" value="${param.id}" id="text-0ad8" name="id" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
-                  <c:if test="${errors.id}">
-					<script type="text/javascript">
-						alert('ID를 입력하세요.');
-					</script>
-				  </c:if>
+                <input type="hidden" id="pageId" name="pageId" value="619405">
+                <div class="u-form-group u-form-name">
+                  <label for="name-ebf3" class="u-label">Name</label>
+                  <input type="text" placeholder="Enter your Name" value="${param.name}" id="name-ebf3" name="name" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
                 </div>
                 <div class="u-form-group u-form-group-2">
+                  <label for="text-0ad8" class="u-label">ID</label>
+                  <input type="text" placeholder="Enter your ID" value="${param.id}" id="text-0ad8" name="ID" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
+                </div>
+                <div class="u-form-group u-form-group-3">
                   <label for="text-485b" class="u-label">Password</label>
-                  <input type="password" id="text-485b" name="password" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" placeholder="Enter your Password">
-                  <c:if test="${errors.password}">
-					<script type="text/javascript">
-						alert('암호를 입력하세요.');
-					</script>
-				  </c:if>
+                  <input type="text" id="text-485b" name="Password" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" placeholder="Enter your Password">
                 </div>
-                <div class="u-align-center u-form-group u-form-submit">
-                  <!-- <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-radius-20 u-btn-1">Enter<br>
-                  </a> -->
-                  <input type="submit" value="submit" class="u-form-control-hidden">
+                <div class="u-form-group u-form-group-4">
+                  <label for="text-8310" class="u-form-control-hidden u-label"></label>
+                  <input type="text" placeholder="Check your Password" id="text-8310" name="text-1" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
                 </div>
+                <div class="u-form-email u-form-group">
+                  <label for="email-ebf3" class="u-label">Email</label>
+                  <input type="email" placeholder="Enter a valid email address" value="${param.email}" id="email-ebf3" name="email" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
+                </div>
+                <span>
+	                <div class="u-align-center u-form-group u-form-submit">
+	                  <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-radius-20 u-btn-1">Enter<br>
+	                  </a>
+	                  <input type="submit" value="submit" class="u-form-control-hidden">
+	                </div>
+	                <div class="u-align-center u-form-group u-form-submit">
+	                  <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-radius-20 u-btn-1">cancel<br>
+	                  </a>
+	                  <input type="submit" value="submit" class="u-form-control-hidden">
+	                </div>
+                </span>
                 <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
                 <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
                 <input type="hidden" value="" name="recaptchaResponse">
               </form>
             </div>
-            <a href="Join.jsp" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-palette-1-base u-btn-2">SignUp<span style="font-size: 1rem;">
-                <span style="font-size: 1.5rem;"></span>
-              </span>
-            </a>
           </div>
         </div>
       </div>
