--- a/environment/src/main/webapp/view/Login.html
+++ b/environment/src/main/webapp/view/Login.html
@@ -64,7 +64,7 @@
           <div class="u-container-layout u-container-layout-1">
             <h1 class="u-text u-text-default u-text-palette-1-base u-text-1">Sign in!</h1>
             <div class="u-form u-form-1">
-              <form action="https://nicepage.com/editor/Forms/Process" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
+              <form action="login.do" method="post">
                 <input type="hidden" id="siteId" name="siteId" value="618681">
                 <input type="hidden" id="pageId" name="pageId" value="619496">
                 <div class="u-form-group u-form-group-1">
